<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">MApp42</string>
    <string name="id">学号:</string>
    <string name="_12">12</string>
    <string name="name">姓名：</string>
    <string name="furina">芙宁娜</string>
    <string name="age">年龄：</string>
    <string name="_18">18</string>
    <string name="sex">性别:</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="secret">保密</string>
    <string name="hobby">爱好:</string>
    <string name="eat">吃饭</string>
    <string name="sleep">睡觉</string>
    <string name="playgame">打游戏</string>
    <string name="study">学习</string>
    <string name="other">其他</string>
    <string name="determine">&#160;&#160;&#160;保存&#160;&#160;&#160;</string>
    <string name="read">&#160;&#160;&#160;读取&#160;&#160;&#160;</string>
    <string name="update"><![CDATA[   更新   ]]></string>
    <string name="delete"><![CDATA[   删除   ]]></string>
</resources>
