<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStuFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/add_stu_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:columnCount="2"
            app:rowCount="5">

            <TextView
                android:id="@+id/out_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id" />

            <EditText
                android:id="@+id/input_user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="number"
                android:text="@string/_12"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/out_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/input_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="textPersonName"
                android:text="@string/furina"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/out_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age" />

            <EditText
                android:id="@+id/input_user_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="number"
                android:text="@string/_18"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/out_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex" />

            <RadioGroup
                android:id="@+id/input_user_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/out_sex_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/man" />

                <RadioButton
                    android:id="@+id/out_sex_women"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/women" />

                <RadioButton
                    android:id="@+id/out_sex_secret"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/secret" />
            </RadioGroup>

            <TextView
                android:id="@+id/out_hobby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hobby" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/input_user_hobby_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eat" />

                <CheckBox
                    android:id="@+id/input_user_hobby_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sleep" />

                <CheckBox
                    android:id="@+id/input_user_hobby_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playgame" />

                <CheckBox
                    android:id="@+id/input_user_hobby_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/study" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/input_user_hobby_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/other" />

                    <EditText
                        android:id="@+id/input_user_hobby_5_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:inputType="text"
                        android:text=""
                        android:autofillHints=""
                        tools:ignore="LabelFor" />
                </LinearLayout>

            </LinearLayout>


        </androidx.gridlayout.widget.GridLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_select"
                android:textColor="@color/black"
                android:text="@string/determine"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/read_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_select"
                android:textColor="@color/black"
                android:text="@string/read"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>